wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_multiple_errors.stderr
error: Enum variant is missing `category` attribute
 --> tests/derive_error_category/fail_multiple_errors.rs:4:5
  |
4 |     First,
  |     ^^^^^

error: Enum variant is missing `category` attribute
 --> tests/derive_error_category/fail_multiple_errors.rs:5:5
  |
5 |     Second,
  |     ^^^^^^
